--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <style>
+      html, body {
+        padding:0;
+        margin:0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"><!--ssr-outlet--></div>
